--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "react-dom": "^16.13.1",
     "react-flipcard": "^0.2.1",
     "react-sound": "^1.2.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "terser-webpack-plugin": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
@@ -37,6 +35,9 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "standard": "^14.3.4",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
